--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "5.29.0",
     "eslint": "^8.18.0",
     "jasmine-core": "~4.1.0",
