--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "5.29.0",
+    "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.18.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
