--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.18.0",
     "jasmine-core": "^4.2.0",
-    "karma": "~6.3.0",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
