--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev:ssr": "ng run admin:serve-ssr",
+    "serve:ssr": "node dist/admin/server/main.js",
+    "build:ssr": "ng build && ng run admin:server",
+    "prerender": "ng run admin:prerender"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^14.1.0",
     "@angular/animations": "^14.1.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
@@ -18,13 +23,15 @@
     "@angular/forms": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/platform-server": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@nguniversal/express-engine": "^14.0.3",
+    "express": "^4.15.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.11.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.0",
     "@angular-eslint/builder": "14.0.2",
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
@@ -32,7 +39,10 @@
     "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "^14.1.0",
     "@angular/compiler-cli": "^14.1.0",
+    "@nguniversal/builders": "^14.0.3",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^14.15.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
