--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "14.0.2",
+    "@angular-eslint/builder": "^14.0.3",
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/schematics": "14.0.2",
