--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular-eslint/eslint-plugin": "^14.0.3",
     "@angular-eslint/eslint-plugin-template": "^14.0.3",
     "@angular-eslint/schematics": "^14.0.3",
-    "@angular-eslint/template-parser": "14.0.2",
+    "@angular-eslint/template-parser": "^14.0.3",
     "@angular/cli": "^14.1.3",
     "@angular/compiler-cli": "^14.1.3",
     "@nguniversal/builders": "^14.1.0",
