--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@nguniversal/builders": "^14.1.0",
     "@types/express": "^4.17.0",
-    "@types/jasmine": "~4.0.0",
+    "@types/jasmine": "^4.3.0",
     "@types/node": "^18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
