--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "~4.7.2"
+    "typescript": "^4.8.2"
   }
 }
